--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -98,8 +98,16 @@ body {
   color: #ffc045;
 }
 
-.work-section-button:hover {
-  background-color: #e56039 !important;
+.work-section-button {
+  cursor: pointer;
+  border: 1px solid #ccc;
+  background-color: transparent;
+  color: #fff;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.work-section-button.active {
+  background-color: #e56039;
   border-color: #e56039 !important;
 }
 
