--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -236,6 +236,13 @@ a,
   }
 }
 
+.company-badge {
+  padding: 5px;
+  background-color: #19192d;
+  border-radius: 20px;
+  color: #fff;
+}
+
 /* ourbrands slider animation */
 .slider-container {
   overflow: hidden;
@@ -388,4 +395,31 @@ video {
   .why-ascender-responsive-height {
     height: 700px;
   }
+}
+
+.carousel-line {
+  border-top: 2px solid #c5d1e8;
+  color: #c5d1e8;
+}
+
+.carousel-dot {
+  height: 10px;
+  width: 10px;
+  border: 1px solid #c5d1e8;
+  border-radius: 5px;
+  position: absolute;
+  right: 0;
+  top: 11.5px;
+}
+
+.image-gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.carousel-image {
+  height: auto;
+  width: 100%;
+  max-width: 269px;
 }
