--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -364,11 +364,8 @@ video {
   text-decoration: none;
   font-size: 20px;
   color: #818181;
+  display: block;
   transition: 0.3s;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
 }
 
 @media (max-width: 768px) {
@@ -386,6 +383,18 @@ video {
     font-size: 14px;
   }
 }
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav a.active {
+  color: white;
+  background-color: #575757; /* Highlight color */
+  font-weight: bold;
+}
+
+/* Sidebar ends */
 
 .why-ascender-responsive-height {
   height: auto;
