--- a/css/styles.css
+++ b/css/styles.css
@@ -31,19 +31,26 @@ body {
 }
 
 .service-heading {
-  color: #c5d1e8;
-  font-size: 32px !important;
+  color: #000000;
+  font-size: 22px !important;
 }
 
 .service-heading.active {
-  color: #3428c2;
-  font-family: Nunito-Bold;
+  color: #e56039;
+  font-size: 24px !important;
+}
+
+.service-heading:hover {
+  color: #e56039;
 }
 
 .works-heading.active {
-  color: #3428c2;
-  font-family: Nunito-Bold;
+  color: #e56039;
   font-size: 24px;
+}
+
+.works-heading:hover {
+  color: #e56039;
 }
 
 .font-Nunito-regular {
@@ -112,7 +119,12 @@ body {
 
 .work-section-button.active {
   background-color: #e56039;
-  border-color: #e56039 !important;
+  border: 1px solid #000000 !important;
+}
+
+.work-section-button:hover {
+  background-color: #e56039;
+  border: 1px solid #000000 !important;
 }
 
 @media (min-width: 992px) {
@@ -173,6 +185,11 @@ a,
   -webkit-text-stroke-color: #fff;
 }
 
+.outlined-dark {
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #000000;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 *::-webkit-scrollbar {
   display: none;
@@ -187,8 +204,8 @@ a,
 }
 
 .place:hover .font18 {
-  color: #3428c2;
-  font-weight: bold;
+  color: #e56039;
+  /* font-weight: bold; */
 }
 
 .pointer {
@@ -258,7 +275,7 @@ a,
 }
 
 .slider-container .slider {
-  animation: slidein 30s linear infinite;
+  animation: slides 35s linear infinite;
   white-space: nowrap;
 }
 
@@ -285,23 +302,12 @@ a,
   }
 }
 
-@keyframes slidein {
+@keyframes slides {
   from {
-    transform: translate3d(0, 0, 0);
+    transform: translateX(0);
   }
-
   to {
-    transform: translate3d(-100%, 0, 0);
-  }
-}
-
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
+    transform: translateX(-100%);
   }
 }
 
@@ -386,12 +392,13 @@ video {
 }
 
 .sidenav a:hover {
-  color: #f1f1f1;
+  color: #ffffff !important;
+  background-color: #e56039;
 }
 
 .sidenav a.active {
   color: white !important;
-  background-color: #19192d; /* Highlight color */
+  background-color: #e56039;
   font-weight: bold;
 }
 
